--- a/NEET AR 11 BIO PHASE 1/app/build.gradle
+++ b/NEET AR 11 BIO PHASE 1/app/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.ar:core:1.0.0'
     implementation 'de.javagl:obj:0.3.0'
-    compile 'me.dm7.barcodescanner:zxing:1.9'
-    compile 'javax.vecmath:vecmath:1.5.2'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'javax.vecmath:vecmath:1.5.2'
     implementation project(':licensing_lib')
     implementation project(':library')
 }
