Chapter Activity Updated and Splash Activity Added.

--- a/NEET AR 11 BIO PHASE 1/app/src/main/AndroidManifest.xml
+++ b/NEET AR 11 BIO PHASE 1/app/src/main/AndroidManifest.xml
@@ -48,12 +48,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.deemsysinc.neetar11biophase2.activities.MenuActivity"
+            android:name="com.deemsysinc.neetar11biophase2.activities.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.deemsysinc.neetar11biophase2.activities.MenuActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name="com.deemsysinc.neetar11biophase2.activities.ModelsActivity"
